--- a/404.html
+++ b/404.html
@@ -38,6 +38,5 @@ search_exclude: true
 <div class="center">
   <img src="{{ '/assets/images/couch.png' | relative_url }}" alt="Looking under the couch" class="couch-img">
   <h1>Oops! Page not found.</h1>
-  <p>We're sorry, but we couldn't find what you were looking for.</p>
-  <p>Maybe try looking under the couch?</p>
+  <h3>"Nope, not under here either! Looks like this page has gone MIA. Want to try the homepage?"</h3>
 </div>
