--- a/404.html
+++ b/404.html
@@ -7,86 +7,34 @@ search_exclude: true
 ---
 
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    color: #333;
-    background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
-  }
-  
   .center {
     text-align: center;
     margin-top: 50px;
-    padding: 0 20px;
   }
-
-  h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
-    color: #343a40;
   }
-
-  h4 {
-    font-size: 22px;
-    margin-bottom: 30px;
-    font-weight: 400;
-    color: #6c757d;
-  }
-
-  .emoji {
-    font-size: 100px;
-  }
-
   .btn-home {
     display: inline-block;
     margin-top: 20px;
-    padding: 12px 24px;
+    padding: 10px 20px;
     font-size: 18px;
     background-color: #007bff;
     color: white;
     text-decoration: none;
-    border-radius: 50px;
-    box-shadow: 0 4px 10px rgba(0, 123, 255, 0.2);
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
   }
-
   .btn-home:hover {
     background-color: #0056b3;
-    box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
   }
-
   .couch-img {
-    max-width: 80%;
+    max-width: 100%;
     height: auto;
     margin-top: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  }
-
-  @media (max-width: 768px) {
-    h1 {
-      font-size: 28px;
-    }
-
-    h4 {
-      font-size: 18px;
-    }
-
-    .btn-home {
-      font-size: 16px;
-      padding: 10px 20px;
-    }
-
-    .couch-img {
-      max-width: 100%;
-    }
   }
 </style>
 
 <div class="center">
-  <img src="{{ '/assets/images/couch.png' | relative_url }}" alt="Couple looking under the couch" class="couch-img">
+  <img src="{{ '/assets/images/couch.png' | relative_url }}" alt="Looking under the couch" class="couch-img">
   <h1>Oops! Page not found.</h1>
-  <h4>"Nope, not under here either! Looks like this page has gone MIA. Want to try the homepage?"</h4>
-  <a href="/" class="btn-home">Take me home</a>
+  <p>"Nope, not under here either! Looks like this page has gone MIA. Want to try the homepage?"</p>
 </div>
