--- a/404.html
+++ b/404.html
@@ -38,3 +38,5 @@ search_exclude: true
   <h1>Oops! Page not found.</h1>
   <p>"Nope, not under here either! Looks like this page has gone MIA. Want to try the homepage?"</p>
 </div>
+
+[Previous Page](/openmp-server-deploy/part-c){: .btn .btn-blue .v-align-middle .py-6}
