--- a/404.html
+++ b/404.html
@@ -41,5 +41,5 @@ search_exclude: true
   <img src="{{ '/assets/images/couch.png' | relative_url }}" alt="Looking under the couch" class="couch-img">
   <h1>Oops! Page not found.</h1>
   <p>"Nope, not under here either! Looks like this page has gone MIA."</p>
-  <a href="/openmp-server-deploy/part-c" class="btn-gohome">Take me home</a>
+  <a href="/index.html" class="btn-gohome">Take me home</a>
 </div>
